# database_rand_nos_sqlite

./: .gitignore  README.md
databases/: mydb.db
src/: ReadMe.md  main.cpp  meson.build
src/rand_class/: gen_rand_driver.cpp  meson.build  rand.h  rand_class.cpp  rand_int.cpp
src/rand_class/power_func/: meson.build  power.h  power_funcs.cpp
src/rand_class/trig_func/: Trig_funcs.cpp  meson.build  trig.h
src/sqlite_funcs/: sqlite.cpp  sqlite.h
